--- a/main.tex
+++ b/main.tex
@@ -134,6 +134,7 @@
 \newcommand{\GL}{\mathit{GL}}
 \newcommand{\perf}{\mathrm{perf}}
 \newcommand{\gpd}{\mathrm{gpd}}
+\newcommand{\ptyp}{p\text{-}\mathrm{typ}}
 \newcommand{\id}{\mathrm{id}}
 \newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 \newcommand{\FGps}{\mathrm{FGps}}
