--- a/finite.tex
+++ b/finite.tex
@@ -200,7 +200,7 @@ The context for $MUP$ is considerably more complicated, but Quillen's theorem ca
 
 Our first goal for today is to outline a program for the rest of this Case Study.  Yesterday, we developed a rich target for $E$--homology: sheaves over an algebro-geometric object $\context{E}$.  Furthermore, we have explored in \Cref{ContextOfMUPExample} an identification $\context{MUP} \simeq \moduli{fg}$, where $\moduli{fg}$ is the ``moduli of formal groups''.  Our initial goal for today is to outline a program by which we can leverage this to study $MUP$.  Abstractly, one can hope to study any sheaf, including $\context{MUP}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\context{MUP}$, so that we can determine where to even look for those stalks.
 
-With this in mind, given a map $f$ in the diagram
+With this in mind, given a map $f$ in the diagram\todo{The bottom of COCTALOS page 68 has a better interpretation of what picking a formal group law has to do with anything, I think.}
 \begin{center}
 \begin{tikzcd}
 \Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MU}[0] \arrow{d} \arrow[-,double]{r} & \Spec MUP_0 \\
@@ -276,7 +276,7 @@ In order to prove the missing \Cref{Symmetric2CocycleLemma}, it will be useful t
 The following are equivalent:
 \begin{enumerate}
 \item Symmetric $2$--cocycles that are homogeneous polynomials of degree $n$ are spanned by \[c_n = \frac{1}{d_n} \cdot ((x + y)^n - x^n - y^n).\]
-\item For $F$ is an $r$--bud, the set of $(r+1)$--buds extending $F$ form a torsor under addition for $R_{2n-2} \otimes c_r$.
+\item For $F$ is an $r$--bud, the set of $(r+1)$--buds extending $F$ form a torsor under addition for $R_{2n-2} \otimes c_r$.\todo{Things suddenly become graded here --- and you really make use of this.  Explain yourself.}
 \item Any homomorphism $(QL)_{2n} \to A$ factors through the map $(QL)_{2n} \to T_{2n}$.
 \item There is a canonical splitting $T_{2n} \to (QL)_{2n}$.
 \end{enumerate}
@@ -491,7 +491,7 @@ The complementary open substack of dimension $d$ is harder to describe.  From fi
 
 We can now rephrase \Cref{LandwebersStackyTheorem} in terms of algebraic conditions.
 \begin{theorem}[{Landweber, cf.\ \Cref{LandwebersStackyTheorem}, see also \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]\citeme{Find Landweber's original paper}
-Let $M$ be a module for \[\sheaf O_{\moduli{fg}^{\ptyp}} \cong \Z_{(p)}[v_1, \ldots, v_d, \ldots].\]  When $p$, $v_1$, \ldots forms a regular sequence on $M$, then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fg}^{\ptyp}}} MU_0(X)\] determines a homology theory \emph{on finite spectra $X$}.  Moreover, if for some $d \gg 0$ we have $M / I_d = 0$, then the same formula determines a homology theory \emph{on all spectra $X$}.
+Let $M$ be a module for \[\sheaf O_{\moduli{fg}^{\ptyp}} \cong \Z_{(p)}[v_1, \ldots, v_d, \ldots].\]  When $(p, v_1, \ldots, v_d, \ldots)$ forms an infinite regular sequence on $M$, then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fg}^{\ptyp}}} MU_0(X)\] determines a homology theory \emph{on finite spectra $X$}.  Moreover, if for some $d \gg 0$ we have $M / I_d = 0$, then the same formula determines a homology theory \emph{on all spectra $X$}.
 \end{theorem}
 \begin{proof}
 This is a direct consequence of the classification of closed substacks of $\moduli{fg}{}_{,(p)}$ in \Cref{LandwebersClassificationOfClosedSubstacks}.  Specifically, $M$ determines a flat quasicoherent sheaf on $\moduli{fg}{}_{,(p)}$ when $\Tor_1(M, N) = 0$ for any other comodule $N$.  Using the classification of closed substacks and the regularity condition, one can iteratively use the short exact sequences \[0 \to M / I_d \xrightarrow{\cdot v_d} M / I_d \to M / I_{d+1} \to 0\] to trade this condition for the list of conditions
@@ -540,12 +540,12 @@ Consider the case of an infinitesimal parameter space $X = \A^1$.  A map $\A^1 \
 \end{example}
 
 The analysis of $(\moduli{fg})^\wedge_\Gamma$ is due to Lubin and Tate, but we follow a more structured approach written down by Lazarev.\citeme{Cite both of these}
-\begin{definition}\todo{Phrase this geometrically?  Can you?}
+\begin{definition}\todo{Can this be phrased geometrically?}
 Let $+_\phi$ be a formal group law. The deformation complex $\widehat C^*(\phi)$ is defined by \[R \to R\ps{x_1} \to R\ps{x_1, x_2} \to R\ps{x_1, x_2, x_3} \to \cdots\] with differential
 \begin{align*}
 (df)(x_1, \ldots, x_{n+1}) & = \phi_1\left(\sum_{i=1}^n {}_\phi x_i, x_{n+1} \right) \cdot f(x_1, \ldots, x_n) \\
 & \quad + \sum (-1)^i f(x_1, \ldots, x_i +_\phi x_{i+1}, \ldots, x_{n+1}) \\
-& \quad (-1)^{n+1} \left( \phi_2\left(x_1, \sum_{i=2}^{n+1} {}_\phi x_i \right) \cdot f(x_2, \ldots, x_{n+1}) \right),
+& \quad + (-1)^{n+1} \left( \phi_2\left(x_1, \sum_{i=2}^{n+1} {}_\phi x_i \right) \cdot f(x_2, \ldots, x_{n+1}) \right),
 \end{align*}
 where we have written
 \begin{align*}
@@ -555,46 +555,43 @@ where we have written
 \end{definition}
 
 This complex tracks the data of infinitesimal deformations.  For instance, consider a deformed automorphism $f$ of $+_\phi$, expressed as \[f(x) = f_0(x) + h f_1(x) + h^2 f_2(x) + \cdots,\] and satisfying \[f(x +_\phi y) = f(x) +_\phi f(y).\]  Applying $\left.\frac{\partial}{\partial h}\right|_{h=0}$ to this equality gives \[f_1(x +_\phi y) = \phi_1(x, y)f_1(x) + \phi_2(x, y)f_1(y)\] and thus $f_1$ is a $1$--cocycle in the deformation complex.  A similar sequence of observations culminates in the following theorem:
-\begin{theorem}\citeme{Definitely blame this on Lazarev}
-Let $+_\phi$ be a formal group law over a ring $R$ and let $S \to R$ be a square--zero extension with kernel $M$.
+\begin{theorem}[{\cite[p.\ 1320]{Lazarev}}]
+Let $+_\phi$ be a formal group law over a ring $R$ and let $R[h]/h^2 \to R$ be the square--zero extension with kernel $(h)$.
 \begin{enumerate}
-\item Automorphisms of $+_\phi$ over $S$ give elements in $\widehat Z^1(\phi)$.
-\item Two automorphisms are equivalent if...?
-\item Extensions of $+_\phi$ to $S$ give elements in $\widehat Z^2(\phi)$.
-\item Two such extensions are isomorphic over $S$ if their cocycles are bounded by an element in $\widehat B^2(\phi)$. \qed
+\item Automorphisms of $+_\phi$ over $R[h]/h^2$ correspond to elements in $\widehat Z^1(\phi)$.
+\item Extensions of $+_\phi$ to $R[h]/h^2$ correspond to elements in $\widehat Z^2(\phi)$.
+\item Two such extensions are isomorphic as formal group laws over $R[h]/h^2$ if their cocycles differ by an element in $\widehat B^2(\phi)$. \qed
 \end{enumerate}
-\todo{Summarize all the facts about the deformation complex here.}
 \end{theorem}
 
 So, this complex contains all the information we're interested in.  Miraculously, we actually already studied the main input to computing this complex yesterday:
 
-\begin{lemma}
-This is quasi-isomorphic to the usual bar complex.
+\begin{lemma}[{\cite[p.\ 1320]{Lazarev}}]
+This is quasi-isomorphic to the usual bar complex by the map
+\[f \mapsto \phi_1\left(0, \sum_{i=1}^n{}_\phi x_i \right)^{-1} f(x_1, \ldots, x_n). \qed\]
 \end{lemma}
-\begin{proof}\todo{Actually write this.}
-The usual bar complex receives a map defined by \[f \mapsto \check{f}(x_1, \ldots, x_n) = F_1\left( 0, \sum_{i=1}^n {}F x_i \right)^{-1} f(x_1, \ldots, x_n),\] and this is the quasi-isomorphism.
 
-You'll probably want to know the formulas
-\begin{align*}
-F_1(x, y) & = F_1(0, x)^{-1} F_1(0, F(x, y)), \\
-F_2(x, y) & = F_2(y, 0)^{-1} F_2(F(x, y), 0) = F_1(0, y)^{-1} F_1(0, F(x, y)).
-\end{align*}
-\end{proof}
+Of course, yesterday we computed the specific case of $\G = \G_a$.  However, by filtering the multiplication on $\G$ by degree, we can use this specific calculation to get up to the general one.
 
 \begin{lemma}
-Let $\G$ be a formal group of finite height $\height(\G) = d$ over a field $k$.  Then, $H^2(\G; M \otimes \G_a)$ is a free $k$--vector space of dimension $(d - 1)$.
+Let $\G$ be a formal group of finite height $d$ over a field $k$.  Then, $H^2(\G; M \otimes \G_a)$ is a free $k$--vector space of dimension $(d - 1)$.
 \end{lemma}
 \begin{proof}
-Filter $\G$ by degree and consider the resulting spectral sequence.  Its input is $H^*(\G_a; M \otimes \G_a)$, which we computed yesterday.  To compute the differentials, one computes \[(x +_\phi y)^{p^r} - (x^{p^r} + y^{p^r}) = (\text{unit}) \cdot c_{p^{d + r}}(x, y) + \cdots,\] where we used $c_{p^d}^{p^r} = c_{p^{r+d}}$.  So, we see that there are at least $d - 1$ things at the bottom of the spectral sequence which are not coboundaries, and we need to check that they are indeed cocycles.\todo{This follows from Corollary 7.4.4 in the crystals notes.  Finish this.}
+Select a coordinate on $\G$ of the form \[x +_\phi y = x + y + (\mathrm{unit}) c_{p^d} + \cdots.\]  Then, filter $\G$ by degree and consider the resulting spectral sequence of signature \[H^*(\G_a; M \otimes \G_a) \Rightarrow H^*(\G; M \otimes \G_a).\]  To compute the differentials in this spectral sequence, one computes by hand the formula for the differential in the bar complex, working up to lowest visible degree.  For example: \[(x +_\phi y)^{p^r} - (x^{p^r} + y^{p^r}) = (\text{unit}) \cdot c_{p^{d + r}}(x, y) + \cdots,\] where we used $c_{p^d}^{p^r} = c_{p^{r+d}}$.  So, we see that there are at least $d - 1$ things at the bottom of the spectral sequence which are not coboundaries, and we need to check that they are indeed permanent cocycles.  To do this, we need only show that they are realized by deformations, which Lubin and Tate accomplish in \Cref{LubinTateRealizationLemma}.
 \end{proof}
+\begin{lemma}[{\cite[Proposition 1.1]{LubinTate}}]\label{LubinTateRealizationLemma}
+Let $W$ be a local ring with residue field $k$, and let $\phi$ be a group law of height $d$ on $k$.  There is a group law $\tilde\phi$ over $W\ps{u_1, \ldots, u_{d-1}}$ restricting to $\phi$ on $k$ such that \[x +_{\tilde \phi} y \equiv x + y + u_j c_{p^j}(x, y) \pmod{u_1, \ldots, u_{j-1}, (x, y)^{p^j+1}}. \qed\]
+\end{lemma}
+
+
+
+
+
 
 \textbf{Now build the universal object and check its universal property.  The construction is done in 7.4.3 and the universal property is done in 7.5 of the crystals notes.}
 
-
-
 Show that the action of the stabilizer group lifts to an action on Lubin--Tate space
 
-Lubin--Tate deformation theory
 
 
 
