--- a/finite.tex
+++ b/finite.tex
@@ -435,7 +435,7 @@ Replace the formal group law by its $p$--typification.  Based on \Cref{RecoverLo
 
 With the notion of ``height'' firmly in hand, we are now in a position to classify the geometric points of $\moduli{fg}$.
 
-\begin{theorem}[{\cite[Th\'eor\`eme IV]{Lazard}}]
+\begin{theorem}[{\cite[Th\'eor\`eme IV]{Lazard}}]\label{FGpsOverAlgClosedFields}
 Let $\bar k$ be an algebraically closed field of positive characteristic.  There is a bijection between maps \[\Gamma: \Spec \bar k \to \moduli{fg}\] and numbers $1 \le d \le \infty$ given by $\Gamma \mapsto \height(\Gamma)$.
 \end{theorem}
 \begin{proof}
@@ -612,25 +612,20 @@ The nice picture I drew for Catherine
 
 -----
 
-We have now arrived at the conclusion of our program from \Cref{StructureOfMfgl} for manufacturing interesting homology theories from Quillen's theorem: we have an ample supply of open substacks of $\moduli{fg}$, and we have analyzed its closed points as well as their deformation neighborhoods.  We make the following definitions:
+We have now arrived at the conclusion of our program from \Cref{StructureOfMfgl} for manufacturing interesting homology theories from Quillen's theorem: we have an ample supply of open substacks of $\moduli{fg}$, and we have analyzed its closed points as well as their deformation neighborhoods.
+\begin{definition}
+We define the following ``chromatic'' homology theories:
 \begin{itemize}
-\item Recall that the moduli of $p$--typical group laws is affine, presented by the scheme $\Spec BP_*$, $BP_* := \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$.  Since the inclusion of $p$--typical group laws into all group laws induces an equivalence of stacks, it follows that this formula determines a homology theory, called \textit{Brown--Peterson homology}: \[BP_*(X) := MU_*(X) \otimes)_{MU_*} BP_*.\]
-\item A chart for the open substack $\moduli{fg}^{\le d}$ in terms of $\moduli{fg}{}_{,(p)} \cong \Spec \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$ is $\Spec \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm]$.  It follows that there is a homology theory $E(d)_*(X)$, called \textit{the $d${\th} Johnson--Wilson homology}, defined by \[E(d)_*(X) := BP_*(X) \otimes_{BP_*} E(d)_*.\]
-\item Similarly, for a formal group $\Gamma$ of height $d < \infty$, there is a chart $\Spf \Z_p\ps{u_1, \ldots, u_{d-1}}$ for its deformation neighborhood.  Correspondingly, there is a homology theory $E_\Gamma{}_*$, called \textit{the Morava $E$--theory for $\Gamma$}, determined by \textbf{Actually, this one is complicated: you want to tensor down to every formal neighborhood, but there may be infinite divisibility data to keep track of and shuffle around.  I should think this through more carefully.}
-\item Finally, since $(p, u_1, \ldots, u_{d-1})$ forms a regular sequence on $E_\Gamma{}_*$, we can form the regular quotient $K_\Gamma$ in the homotopy category.  This determines a spectrum, and hence determines a homology theory called \textit{the Morava $K$--theory for $\Gamma$}.
+\item Recall that the moduli of $p$--typical group laws is affine, presented by the scheme $\Spec BP_*$, $BP_* := \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$.  Since the inclusion of $p$--typical group laws into all group laws induces an equivalence of stacks, it follows that this formula determines a homology theory on finite spectra, called \textit{Brown--Peterson homology}: \[BP_*(X) := MU_*(X) \otimes_{MU_*} BP_*.\]
+\item A chart for the open substack $\moduli{fg}^{\le d}$ in terms of $\moduli{fgl}^{\ptyp} \cong \Spec \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$ is $\Spec \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm]$.  It follows that there is a homology theory $E(d)$, called \textit{the $d${\th} Johnson--Wilson homology}, defined on all spectra by \[E(d)_*(X) := BP_*(X) \otimes_{BP_*} E(d)_*.\]
+\item Similarly, for a formal group $\Gamma$ of height $d < \infty$, there is a chart $\Spf \Z_p\ps{u_1, \ldots, u_{d-1}}$ for its deformation neighborhood.  Correspondingly, there is a homology theory $E_\Gamma{}_*$, called \textit{the (discontinuous) Morava $E$--theory for $\Gamma$}, determined by \[E_\Gamma{}_*(X) := BP_*(X) \otimes_{BP_*} \Z_p\ps{u_1, \ldots, u_{d-1}}.\]
+\item Since $(p, u_1, \ldots, u_{d-1})$ forms a regular sequence on $E_\Gamma{}_*$, we can form the regular quotient $K_\Gamma$ in the homotopy category.  This determines a spectrum, and hence determines a homology theory called \textit{the Morava $K$--theory for $\Gamma$}.  In the case where $\Gamma$ comes from the Honda $p$--typical formal group law (of height $d$), this spectrum is often written as $K(d)$.  By \Cref{FGpsOverAlgClosedFields}, it often suffices to consider just these spectra to make statements about all $K_\Gamma$.
+\item More delicately, there is a version of Morava $E$--theory which takes into account the formal topology on $(\moduli{fg})^\wedge_\Gamma$.  It is defined by the pro-system $\{E_\Gamma(X) / u^I\}$, where $I$ ranges over multi-indices and the quotient is taken in the ``homotopical sense'', i.e., $u_j$--torsion elements contribute to the odd-degree homotopy of the quotient.
 \end{itemize}
+\end{definition}
 
-Landweber's flatness criterion
-
-A $BP_*$--module $M$ gives a flat sheaf on $\moduli{fg}$ exactly when $(p, v_1, v_2, \ldots, v_{d-1}, \ldots)$ is a regular sequence $M$ too.  (In particular, $BP_*$ is itself such a module, and so gives rise to a homology theory $BP$ with $\context{BP} \simeq \moduli{fg} \times \Spec \Z_{(p)}$.)
-
-
-Point out that it's most important to understand $K(d)$ for each $d$, not $K_\Gamma$ for every $\Gamma$.
-
-\begin{remark}
-Morava $K$--theory at the even prime is not commutative.
-
-\todo[inline]{cf.\ Section 5.2 of KLW.  Or, at $p = 2$ there is a derivation $Q: K \to \Susp K$ with $ab - ba = u Q(a) Q(b)$, so $K^0 X$ is commutative whenever $K^1 X = 0$ (cf.\ Theorem 2.13 of Strickland's \textit{Products on $MU$--modules}).}
+\begin{remark}[{\cite[Section 5.2]{KLW}, \cite[Theorem 2.13]{StricklandProductsOnModules}}]
+Morava $K$--theory at the even prime is not commutative.  Instead, there is a derivation $Q_d: K(d) \to \Susp K(d)$ satisfying \[ab - ba = u Q_d(a) Q_d(b).\]  In particular, $K^0 X$ is a commutative ring whenever $K^1 X = 0$.
 \end{remark}
 
 
