--- a/main.bib
+++ b/main.bib
@@ -641,6 +641,24 @@ MRREVIEWER = {Mark Hovey},
       note = {\url{http://hopf.math.purdue.edu/Strickland/fpfp.pdf}, Accessed: 2014-01-09},
 }
 
+@article {StricklandProductsOnModules,
+    AUTHOR = {Strickland, N. P.},
+     TITLE = {Products on {${\rm MU}$}-modules},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {351},
+      YEAR = {1999},
+    NUMBER = {7},
+     PAGES = {2569--2606},
+      ISSN = {0002-9947},
+     CODEN = {TAMTAM},
+   MRCLASS = {55N22 (55N20)},
+  MRNUMBER = {1641115},
+MRREVIEWER = {W. Stephen Wilson},
+       DOI = {10.1090/S0002-9947-99-02436-8},
+       URL = {http://dx.doi.org/10.1090/S0002-9947-99-02436-8},
+}
+
 @book {Wilson,
     AUTHOR = {Wilson, W. Stephen},
      TITLE = {Brown-{P}eterson homology: an introduction and sampler},
