Skimmed lecture 3.3 and 3.4?
Note to self: A lot of things seems missing.  Should look over it again
when it's more complete.

--- a/finite.tex
+++ b/finite.tex
@@ -424,7 +424,7 @@ There is an inclusion of groupoid--valued sheaves from $p$--typical formal group
 Replace the formal group law by its $p$--typification.  \todo{Finish this.}
 \end{proof}
 
-We're now in a position to 
+We're now in a position to prove
 \begin{theorem}\citeme{Lazard Theorem IV on p.\ 270}
 Let $k$ be an algebraically closed field of positive characteristic.  There is a bijection between maps \[\Gamma: \Spec k \to \moduli{fg}\] and numbers $1 \le d \le \infty$ given by $\Gamma \mapsto \height(\Gamma)$.
 \end{theorem}
