--- a/hinfty.tex
+++ b/hinfty.tex
@@ -35,7 +35,13 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 
 \section{$E_\infty$ ring spectra and their contexts}
 
+\todo[inline]{Mike has suggested looking at the paper \textit{The $K$--theory localization of an unstable sphere}, by Mahowald and Thompson.  In it, they manually construct a resolution of $S^{2n+1}$ suitable for computing the unstable Adams spectral sequence for $K$--theory, but the resolution that they build is also exactly what you would use to compute the mapping spectral sequence for $E_\infty(K^{S^{2n-1}}, K)$.  Additionally, because the unstable $K$--theoretic operations are exhausted by the power operations, these two spectral sequences converge to the same target.
 
+Purely in terms of the $E_\infty$ version, one can consider the composition of spectral sequences \[\Ext_{\Z[\theta]}(\Z, \operatorname{Der}_{K_*-alg}(K^* X, K^*)) \Rightarrow \operatorname{Der}_{K_*-Dyer-Lashof-alg}(K^* X, K^*) \Rightarrow E_\infty(\widehat{\S^0}^X, K^\wedge_p)\] and \[E_\infty(\widehat{\S^0}^X, K^\wedge_p)^{h\Z_p^*} = E_\infty(\widehat{\S^0}^X, \widehat{\S^0})\] where the first spectral sequence is a composition spectral sequence for derivations in $K_*$--algebras and then derivations respecting the Mandell's $\theta$--operation.  If $X$ is an odd sphere, then $K^* X$ has no derivations and this composite spectral sequence collapses, making the composition possible.
+
+This is also related to recent work of Behrens--Rezk on the Bousfield--Kuhn functor...}
+
+\todo[inline]{Another unpublished theorem of Hopkins and Lurie is that the natural map $Y = F(*, Y) \to E_\infty(E_n^Y, E_n)$ is an equivalence when $Y$ is a finite Postnikov tower in the range of degrees that $E_n$ can see.}
 
 
 
